# nais

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  BLUEPRINT.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-windows.yml
.kiro/steering/: product.md  structure.md  tech.md
apps/desktop/: BLUEPRINT.md  index.html  package.json  vite.config.ts
apps/desktop/public/: cubism-core-test.html  live2d-simple-test.html  live2d-test.html  nais-smoke-shim.js
apps/desktop/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AvatarCanvas.tsx  ChatInput.tsx  ErrorBoundary.tsx  SettingsPanel.tsx
apps/desktop/src/services/: agent.ts  avatar.ts  (+4 more)
characters/: BLUEPRINT.md
characters/_template/: BLUEPRINT.md  character.yaml  persona.md  voice.yaml
characters/mao-live2d/: LICENSE.md  character.yaml  persona.md  voice.yaml
characters/pixiv-vrm-sample/: LICENSE.md  character.yaml  persona.md  voice.yaml
crates/nais-bridge/: BLUEPRINT.md
docs/: BLUEPRINT.md  STANDARDS.md
openspec/: BLUEPRINT.md
openspec/changes/bootstrap-nais-tauri/: design.md  proposal.md  tasks.md
openspec/changes/live2d-renderer/: proposal.md
openspec/changes/live2d-vrm-renderer/: design.md  proposal.md  tasks.md
openspec/changes/load-character-packs/: design.md  proposal.md  tasks.md
scripts/: smoke-desktop-avatar.mjs  smoke-live2d-core.mjs  smoke-live2d-only.mjs
(+4 files in other folders)
