[package]
name = "nais-desktop"
version = "0.1.0"
description = "NAIS Desktop"
authors = ["MEKL"]
edition = "2021"

[lib]
name = "nais_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
